@@ -15,16 +15,23 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import javax.sql.DataSource;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.springframework.ai.chat.client.ChatClient;
+import org.springframework.ai.chat.memory.repository.jdbc.JdbcChatMemoryRepository;
+import org.springframework.ai.chat.memory.repository.jdbc.JdbcChatMemoryRepositoryDialect;
 import org.springframework.ai.chat.messages.AssistantMessage;
 import org.springframework.ai.chat.messages.Message;
 import org.springframework.ai.chat.messages.UserMessage;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
+import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.transaction.PlatformTransactionManager;
+import org.springframework.transaction.support.TransactionTemplate;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
@@ -91,7 +98,10 @@ class AtlasAgentIntegrationTest extends AbstractAtlasIntegrationTest {
 
         request.performMvcRequest(
                 post("/api/atlas/agent/courses/{courseId}/chat", course.getId()).contentType(MediaType.APPLICATION_JSON).content(objectMapper.writeValueAsString(requestDTO)))
-                .andExpect(status().isOk()).andExpect(jsonPath("$.timestamp").exists()).andExpect(jsonPath("$.message").exists());
+                .andExpect(status().isOk()).andExpect(jsonPath("$.timestamp").exists())
+                // Assert the actual mocked content (not just existence) so a failure inside the real ChatClient pipeline
+                // cannot be masked by the service's catch-all fallback message
+                .andExpect(jsonPath("$.message").value("Mocked AI response for testing"));
     }
 
     @Test
@@ -235,7 +245,7 @@ class AtlasAgentIntegrationTest extends AbstractAtlasIntegrationTest {
         @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
         void shouldReturnHistoryAfterAddingMessages() throws Exception {
             var instructor = userUtilService.getUserByLogin(TEST_PREFIX + "instructor1");
-            String sessionId = String.format("course_%d_user_%d", course.getId(), instructor.getId());
+            String sessionId = "course_%d_user_%d".formatted(course.getId(), instructor.getId());
 
             // Manually populate chat memory to test history retrieval
             chatMemory.add(sessionId, new UserMessage("First user message"));
@@ -250,7 +260,7 @@ class AtlasAgentIntegrationTest extends AbstractAtlasIntegrationTest {
         @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
         void shouldReturnMultipleMessagesInHistory() throws Exception {
             var instructor = userUtilService.getUserByLogin(TEST_PREFIX + "instructor1");
-            String sessionId = String.format("course_%d_user_%d", course.getId(), instructor.getId());
+            String sessionId = "course_%d_user_%d".formatted(course.getId(), instructor.getId());
 
             // Manually populate chat memory with multiple conversation turns
             chatMemory.add(sessionId, new UserMessage("Tell me about competencies"));
@@ -267,7 +277,7 @@ class AtlasAgentIntegrationTest extends AbstractAtlasIntegrationTest {
         @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
         void shouldExtractPreviewDataFromEmbeddedMessages() throws Exception {
             var instructor = userUtilService.getUserByLogin(TEST_PREFIX + "instructor1");
-            String sessionId = String.format("course_%d_user_%d", course.getId(), instructor.getId());
+            String sessionId = "course_%d_user_%d".formatted(course.getId(), instructor.getId());
 
             // Add clean messages to chat memory (no markers)
             chatMemory.add(sessionId, new UserMessage("Create a competency"));
@@ -288,7 +298,7 @@ class AtlasAgentIntegrationTest extends AbstractAtlasIntegrationTest {
         @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
         void shouldHandleMessagesWithoutPreviewData() throws Exception {
             var instructor = userUtilService.getUserByLogin(TEST_PREFIX + "instructor1");
-            String sessionId = String.format("course_%d_user_%d", course.getId(), instructor.getId());
+            String sessionId = "course_%d_user_%d".formatted(course.getId(), instructor.getId());
 
             // Test message without preview data (no cache entry)
             chatMemory.add(sessionId, new UserMessage("Simple question"));
@@ -384,6 +394,43 @@ class AtlasAgentIntegrationTest extends AbstractAtlasIntegrationTest {
             request.performMvcRequest(
                     post("/api/atlas/agent/courses/{courseId}/chat", course.getId()).contentType(MediaType.APPLICATION_JSON).content(objectMapper.writeValueAsString(requestDTO)))
                     .andExpect(status().isOk());
+        }
+    }
+
+    @Nested
+    class JdbcChatMemorySchema {
+
+        @Autowired
+        private DataSource dataSource;
+
+        @Autowired
+        private PlatformTransactionManager transactionManager;
+
+        /**
+         * Round-trip through the real {@link JdbcChatMemoryRepository} (the bean is mocked in integration tests)
+         * to verify that the Liquibase schema of {@code spring_ai_chat_memory} matches the SQL issued by the
+         * Spring AI JDBC dialect — e.g. the {@code sequence_id} column introduced with Spring AI 2.0.0-RC1.
+         * <p>
+         * Note: the delete runs inside a managed transaction because the Hikari pool is configured with
+         * {@code auto-commit: false} — saveAll commits via the repository's internal transaction template,
+         * but deleteByConversationId issues a plain statement that would otherwise be rolled back on
+         * connection return.
+         */
+        @Test
+        void shouldSaveAndReadConversationWithRealJdbcRepository() {
+            var repository = JdbcChatMemoryRepository.builder().jdbcTemplate(new JdbcTemplate(dataSource)).dialect(JdbcChatMemoryRepositoryDialect.from(dataSource)).build();
+            var conversationId = "course_1_user_1_schema_test_" + java.util.UUID.randomUUID();
+
+            repository.saveAll(conversationId, List.of(new UserMessage("What is a competency?"), new AssistantMessage("A competency is a learning objective.")));
+            List<Message> messages = repository.findByConversationId(conversationId);
+
+            assertThat(messages).hasSize(2);
+            assertThat(messages.getFirst()).isInstanceOf(UserMessage.class);
+            assertThat(messages.getFirst().getText()).isEqualTo("What is a competency?");
+            assertThat(messages.getLast()).isInstanceOf(AssistantMessage.class);
+
+            new TransactionTemplate(transactionManager).executeWithoutResult(status -> repository.deleteByConversationId(conversationId));
+            assertThat(repository.findByConversationId(conversationId)).isEmpty();
         }
     }
 }
